[package]
name = "p2p-signaling-server"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "server"
path = "src/main.rs"
