[package]
name = "p2p-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures = "0.3"
dashmap = "5.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
